<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_contacts">添加联系人</string>
    <string name="new_contacts">新建联系人</string>
    <string name="start_async_task">启动异步任务</string>
    <string name="test">测试</string>
    <string name="test2">测试2</string>
    <string name="consume_memory">消耗内存</string>
    <string name="flip_me">Flip me!</string>
    <string name="pick">Pick</string>
    <string name="view">View</string>
    <string name="format_string">"I'm &lt;b&gt; %1$s&lt;/b&gt;."</string>
    <string name="my_name">garyzhao</string>
    <string name="style_string">Test &lt;b&gt;test&lt;/b&gt;</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="next">下一步</string>
    
    <!-- AlarmManagerActivity -->
    <string name="start_alarm">开启定时器</string>
    <string name="stop_alarm">关闭定时器</string>
    <!-- ServiceActivity -->
    <string name="start_service">启动服务</string>
    <string name="stop_service">停止服务</string>
    <string name="bind_service">绑定服务</string>
    <string name="unbind_service">解绑服务</string>
    <string name="call_service">呼叫服务</string>
    <string name="unbind_service2">解绑服务2</string>
    <string name="call_service2">呼叫服务2</string>
    
</resources>