<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/test_text_view"
        android:layout_width="wrap_content"
        android:layout_height="20dip"
        android:background="#ffff0000"
        android:text="@string/test" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff00ff00"
            android:clipToPadding="true"
            android:orientation="vertical"
            android:padding="20dip" >

            <com.example.androiddemo.view.CustomView
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:background="#ffff0000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dip"
                android:background="#ffff0000"
                android:text="fgeigiowehjgiojroijgjeropagjoj\ngfdgdf\ngdgd\n dsfdsfasd" />

            <TextView
                android:id="@+id/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_world" />

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_world" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_world" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_world" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello_world" />
            </RadioGroup>

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/edittext1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_name"
                    android:inputType="phone"
                    android:textSize="24sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/edittext2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hello_world"
                    android:nextFocusForward="@id/edittext1"
                    android:singleLine="true" />
            </LinearLayout>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hello_world"
                android:singleLine="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hello_world"
                android:singleLine="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hello_world"
                android:singleLine="true" />

            <Button
                android:id="@+id/add_contacts_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_contacts" />
            
            <Button
                android:id="@+id/new_contacts_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_contacts" />

            <Button
                android:id="@+id/test_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test" />

            <Button
                android:id="@+id/consume_memory_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consume_memory" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>